--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,32 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "prettier"
+    // "airbnb"
+  ],
+  "ignorePatterns": ["src/graphql/files/*.tsx"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-non-null-assertion": 0,
+    "react/prop-types": 0,
+    "react/display-name": 0,
+    "jsx-quotes": ["error", "prefer-single"],
+    "prefer-const": "error",
+    "prettier/prettier": 0
+  },
+  "globals": {
+    "React": "writable"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "plugins": ["react"]
 }
