--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen"
+    "codegen": "graphql-codegen",
+    "validate": "prettier ./src --check && eslint . && tsc -project tsconfig.json",
+    "validate-fix": "prettier ./src --write && eslint . --fix && tsc -project tsconfig.json"
   },
   "dependencies": {
     "@apollo/client": "^3.9.0-rc.1",
@@ -15,9 +17,12 @@
     "@graphql-codegen/typescript": "^4.0.4",
     "@graphql-codegen/typescript-operations": "^4.1.2",
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "eslint-config-prettier": "^9.1.0",
     "graphql": "^16.8.1",
     "next": "14.1.0",
     "next-nprogress-bar": "^2.1.2",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
@@ -29,8 +34,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
