--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@graphql-codegen/typescript": "^4.0.4",
     "@graphql-codegen/typescript-operations": "^4.1.2",
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
+    "@react-native-async-storage/async-storage": "^1.22.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "eslint-config-prettier": "^9.1.0",
     "graphql": "^16.8.1",
@@ -25,7 +27,9 @@
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
